--- a/VulkanTest.vcxproj
+++ b/VulkanTest.vcxproj
@@ -131,12 +131,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="IO.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SwagDebug.cpp" />
     <ClCompile Include="Swagkant.cpp" />
     <ClCompile Include="Swagkant.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="IO.hpp" />
     <ClInclude Include="SwagDebug.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
